[gd_scene load_steps=25 format=3 uid="uid://c0cpy5xfdy2nb"]

[ext_resource type="Theme" uid="uid://ch0ahyx502rlq" path="res://data/themes/theme.tres" id="1_fqbyh"]
[ext_resource type="Script" uid="uid://bi2w4gopbk7mv" path="res://src/ui/screens/room_screen.gd" id="1_vxldv"]
[ext_resource type="PackedScene" uid="uid://d4kfoqy7h5f0d" path="res://src/ui/widgets/hp_bar.tscn" id="2_71ary"]
[ext_resource type="Script" uid="uid://w4ie0s4l7syw" path="res://src/loot/loot_pick.gd" id="3_2vu3h"]
[ext_resource type="Script" uid="uid://bdbhlyvac2es6" path="res://src/rooms/room_resource.gd" id="3_soduk"]
[ext_resource type="PackedScene" uid="uid://cp3266w0ukw23" path="res://src/ui/widgets/inventory/InventoryContainer.tscn" id="3_vun85"]
[ext_resource type="Resource" uid="uid://i5l4a63bwaev" path="res://data/rooms/ShopkeeperRoomBasic.tres" id="4_31aom"]
[ext_resource type="Script" uid="uid://dwkk6n2fa1a0c" path="res://src/items/Item.gd" id="4_p1ruj"]
[ext_resource type="Resource" uid="uid://i3cxeo8eo70w" path="res://data/items/runes/RuneOfPoison.tres" id="6_31aom"]
[ext_resource type="Script" uid="uid://lj0e532l0dyu" path="res://src/loot/loot_component.gd" id="6_em7fl"]
[ext_resource type="Resource" uid="uid://bpscdhoshmjls" path="res://data/items/potions/Antidote.tres" id="6_p1ruj"]
[ext_resource type="Script" uid="uid://cuib3tlx6u7dn" path="res://src/rooms/chest_room_resource.gd" id="7_soduk"]
[ext_resource type="Resource" uid="uid://jh6urisffe2v" path="res://data/items/runes/RuneOfResistPoison.tres" id="9_0w4ck"]
[ext_resource type="Resource" uid="uid://dwqgodsd7t16e" path="res://data/items/repair_tools/RepairToolBasic.tres" id="9_t5d3n"]
[ext_resource type="Script" uid="uid://b4y5n724vd0ph" path="res://src/enemies/enemy_resource.gd" id="9_thj5w"]
[ext_resource type="Script" uid="uid://bqxhtkn1xkeqv" path="res://src/rooms/combat_room_resource.gd" id="11_am2x5"]
[ext_resource type="Resource" uid="uid://dij2m52fyjwqp" path="res://data/enemies/Snake.tres" id="12_qopf2"]
[ext_resource type="Resource" uid="uid://clyabowguvivm" path="res://data/items/weapons/ShortSword.tres" id="17_og4wa"]
[ext_resource type="Resource" uid="uid://ddgo03rs1qvck" path="res://data/rooms/ShrineRoomAncient.tres" id="18_wfawr"]
[ext_resource type="Resource" uid="uid://deugb73fiqik0" path="res://data/rooms/ShrineRoomEvil.tres" id="19_hoodt"]

[sub_resource type="Resource" id="Resource_jjfgr"]
script = ExtResource("3_2vu3h")
loot_table = Array[ExtResource("4_p1ruj")]([ExtResource("6_31aom"), ExtResource("17_og4wa"), ExtResource("6_p1ruj"), ExtResource("9_0w4ck"), ExtResource("9_t5d3n")])
count = 2
chance_none = 0.0
pick_method = 1
floor_min = 0
metadata/_custom_type_script = "uid://w4ie0s4l7syw"

[sub_resource type="Resource" id="Resource_bu8q4"]
script = ExtResource("6_em7fl")
gold_min = 50
gold_max = 50
chance_gold_none = 0.0
loot_table = Array[ExtResource("3_2vu3h")]([SubResource("Resource_jjfgr")])
metadata/_custom_type_script = "uid://lj0e532l0dyu"

[sub_resource type="Resource" id="Resource_4t8ue"]
script = ExtResource("7_soduk")
chance_empty = 0.0
loot_component = SubResource("Resource_bu8q4")
title = "Room"
description = "Description"
weight = 10
min_floor = 0
max_floor = -1
metadata/_custom_type_script = "uid://cuib3tlx6u7dn"

[sub_resource type="Resource" id="Resource_037r1"]
script = ExtResource("11_am2x5")
enemy_list = Array[ExtResource("9_thj5w")]([ExtResource("12_qopf2")])
title = "Room"
description = "Description"
weight = 10
min_floor = 0
max_floor = -1
metadata/_custom_type_script = "uid://bqxhtkn1xkeqv"

[node name="RoomScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fqbyh")
script = ExtResource("1_vxldv")
starting_rooms = Array[ExtResource("3_soduk")]([SubResource("Resource_4t8ue"), SubResource("Resource_037r1"), ExtResource("4_31aom"), ExtResource("18_wfawr"), ExtResource("19_hoodt")])
metadata/_edit_vertical_guides_ = [-118.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="FloorLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats"]
unique_name_in_owner = true
layout_mode = 2
text = "FLOOR: X"
horizontal_alignment = 1

[node name="HPBlock" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HPBlock"]
unique_name_in_owner = true
custom_minimum_size = Vector2(77.79, 0)
layout_mode = 2
text = "HP: 0/0"

[node name="HPBar" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HPBlock" instance=ExtResource("2_71ary")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats"]
layout_mode = 2

[node name="StatsBlock" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AtkBonus" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer/StatsBlock"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AtkValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer/StatsBlock/AtkBonus"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ATK: 0"

[node name="DefBonus" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer/StatsBlock"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer/StatsBlock/DefBonus"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "DEF: 0"

[node name="GoldBlock" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer/GoldBlock"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "Gold: "

[node name="GoldValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats/HBoxContainer/GoldBlock"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "X"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats"]
layout_mode = 2

[node name="BuffsBlock" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/VBoxStats"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 112.825)
layout_mode = 2

[node name="InventoryContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_vun85")]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer"]
layout_mode = 2

[node name="RoomTitle" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Room Name"
horizontal_alignment = 1

[node name="RoomDescription" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Room Description goes here."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Actions" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="NextFloorBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Next Floor"

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaveRunBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Leave Run"

[node name="RightPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelLog" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxLog" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/MarginContainer/PanelLog"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/MarginContainer/PanelLog/VBoxLog"]
layout_mode = 2
text = "Log"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/MarginContainer/PanelLog/VBoxLog"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Log" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/MarginContainer/PanelLog/VBoxLog/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 136.51)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
bbcode_enabled = true
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
